After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736805 - multipartdemux leaks new stream events
multipartdemux leaks new stream events
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 14:25 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-19 06:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
multipartdemux: do not leak new stream event (802 bytes, patch)
2014-09-17 14:25 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-17 14:25:01 UTC
Created attachment 286378 [details] [review]
multipartdemux: do not leak new stream event

multipartdemux leaks new stream events
Comment 1 Sebastian Dröge (slomo) 2014-09-18 09:50:09 UTC
commit 3bf81ad12ccf8868e90ab32054392fc172dd90f3
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 16:23:21 2014 +0200

    multipartdemux: do not leak new stream event
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736805