multipartdemux: do not leak new stream event

https://bugzilla.gnome.org/show_bug.cgi?id=736805